--- a/api/swagger-spec/extensions_v1beta1.json
+++ b/api/swagger-spec/extensions_v1beta1.json
@@ -9794,7 +9794,7 @@
    },
    "v1beta1.IngressList": {
     "id": "v1beta1.IngressList",
-    "description": "IngressList is a collection of Ingress.",
+    "description": "DEPRECATED 1.10 - This group version of IngressList is deprecated by networking/v1/IngressList. IngressList is a collection of Ingress.",
     "required": [
      "items"
     ],
@@ -9822,7 +9822,7 @@
    },
    "v1beta1.Ingress": {
     "id": "v1beta1.Ingress",
-    "description": "Ingress is a collection of rules that allow inbound connections to reach the endpoints defined by a backend. An Ingress can be configured to give services externally-reachable urls, load balance traffic, terminate SSL, offer name based virtual hosting etc.",
+    "description": "DEPRECATED 1.10 - This group version of Ingress is deprecated by networking/v1/Ingress. Ingress is a collection of rules that allow inbound connections to reach the endpoints defined by a backend. An Ingress can be configured to give services externally-reachable urls, load balance traffic, terminate SSL, offer name based virtual hosting etc.",
     "properties": {
      "kind": {
       "type": "string",
@@ -9848,7 +9848,7 @@
    },
    "v1beta1.IngressSpec": {
     "id": "v1beta1.IngressSpec",
-    "description": "IngressSpec describes the Ingress the user wishes to exist.",
+    "description": "DEPRECATED 1.10 - This group version of IngressSpec is deprecated by networking/v1/IngressSpec. IngressSpec describes the Ingress the user wishes to exist.",
     "properties": {
      "backend": {
       "$ref": "v1beta1.IngressBackend",
@@ -9872,7 +9872,7 @@
    },
    "v1beta1.IngressBackend": {
     "id": "v1beta1.IngressBackend",
-    "description": "IngressBackend describes all endpoints for a given service and port.",
+    "description": "DEPRECATED 1.10 - This group version of IngressBackend is deprecated by networking/v1/IngressBackend. IngressBackend describes all endpoints for a given service and port.",
     "required": [
      "serviceName",
      "servicePort"
@@ -9890,7 +9890,7 @@
    },
    "v1beta1.IngressTLS": {
     "id": "v1beta1.IngressTLS",
-    "description": "IngressTLS describes the transport layer security associated with an Ingress.",
+    "description": "DEPRECATED 1.10 - This group version of IngressTLS is deprecated by networking/v1/IngressTLS. IngressTLS describes the transport layer security associated with an Ingress.",
     "properties": {
      "hosts": {
       "type": "array",
@@ -9907,7 +9907,7 @@
    },
    "v1beta1.IngressRule": {
     "id": "v1beta1.IngressRule",
-    "description": "IngressRule represents the rules mapping the paths under a specified host to the related backend services. Incoming requests are first evaluated for a host match, then routed to the backend associated with the matching IngressRuleValue.",
+    "description": "DEPRECATED 1.10 - This group version of IngressRule is deprecated by networking/v1/IngressRule. IngressRule represents the rules mapping the paths under a specified host to the related backend services. Incoming requests are first evaluated for a host match, then routed to the backend associated with the matching IngressRuleValue.",
     "properties": {
      "host": {
       "type": "string",
@@ -9920,7 +9920,7 @@
    },
    "v1beta1.HTTPIngressRuleValue": {
     "id": "v1beta1.HTTPIngressRuleValue",
-    "description": "HTTPIngressRuleValue is a list of http selectors pointing to backends. In the example: http://\u003chost\u003e/\u003cpath\u003e?\u003csearchpart\u003e -\u003e backend where where parts of the url correspond to RFC 3986, this resource will be used to match against everything after the last '/' and before the first '?' or '#'.",
+    "description": "DEPRECATED 1.10 - This group version of HTTPIngressRuleValue is deprecated by networking/v1/HTTPIngressRuleValue. HTTPIngressRuleValue is a list of http selectors pointing to backends. In the example: http://\u003chost\u003e/\u003cpath\u003e?\u003csearchpart\u003e -\u003e backend where where parts of the url correspond to RFC 3986, this resource will be used to match against everything after the last '/' and before the first '?' or '#'.",
     "required": [
      "paths"
     ],
@@ -9936,7 +9936,7 @@
    },
    "v1beta1.HTTPIngressPath": {
     "id": "v1beta1.HTTPIngressPath",
-    "description": "HTTPIngressPath associates a path regex with a backend. Incoming urls matching the path are forwarded to the backend.",
+    "description": "DEPRECATED 1.10 - This group version of HTTPIngressPath is deprecated by networking/v1/HTTPIngressPath. HTTPIngressPath associates a path regex with a backend. Incoming urls matching the path are forwarded to the backend.",
     "required": [
      "backend"
     ],
@@ -9953,7 +9953,7 @@
    },
    "v1beta1.IngressStatus": {
     "id": "v1beta1.IngressStatus",
-    "description": "IngressStatus describe the current state of the Ingress.",
+    "description": "DEPRECATED 1.10 - This group version of IngressStatus is deprecated by networking/v1/IngressStatus. IngressStatus describe the current state of the Ingress.",
     "properties": {
      "loadBalancer": {
       "$ref": "v1.LoadBalancerStatus",
