run update bazel

--- a/pkg/client/informers/informers_generated/internalversion/networking/internalversion/BUILD
+++ b/pkg/client/informers/informers_generated/internalversion/networking/internalversion/BUILD
@@ -8,6 +8,7 @@ load(
 go_library(
     name = "go_default_library",
     srcs = [
+        "ingress.go",
         "interface.go",
         "networkpolicy.go",
     ],
