--- a/staging/src/k8s.io/client-go/informers/networking/v1/BUILD
+++ b/staging/src/k8s.io/client-go/informers/networking/v1/BUILD
@@ -8,6 +8,7 @@ load(
 go_library(
     name = "go_default_library",
     srcs = [
+        "ingress.go",
         "interface.go",
         "networkpolicy.go",
     ],
