[cluster/addons] update workloads API version extensions/v1beta1 to apps/v1
Signed-off-by: LinWengang <linwengang@chinacloud.com.cn>

--- a/cluster/addons/calico-policy-controller/calico-node-vertical-autoscaler-deployment.yaml
+++ b/cluster/addons/calico-policy-controller/calico-node-vertical-autoscaler-deployment.yaml
@@ -1,5 +1,5 @@
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   name: calico-node-vertical-autoscaler
   namespace: kube-system
