[addons] update workloads API version extensions/v1beta1 to apps/v1
Signed-off-by: LinWengang <linwengang@chinacloud.com.cn>

--- a/cluster/addons/fluentd-gcp/fluentd-gcp-ds.yaml
+++ b/cluster/addons/fluentd-gcp/fluentd-gcp-ds.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: fluentd-gcp-v2.0.14
@@ -11,6 +11,9 @@ metadata:
 spec:
   updateStrategy:
     type: RollingUpdate
+  selector:
+    matchLabels:
+      k8s-app: fluentd-gcp
   template:
     metadata:
       labels:
