--- a/cluster/addons/cluster-monitoring/influxdb/heapster-controller.yaml
+++ b/cluster/addons/cluster-monitoring/influxdb/heapster-controller.yaml
@@ -46,7 +46,7 @@ data:
     apiVersion: nannyconfig/v1alpha1
     kind: NannyConfiguration
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: heapster-v1.5.0
@@ -58,6 +58,9 @@ metadata:
     version: v1.5.0
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      k8s-app: heapster
   selector:
     matchLabels:
       k8s-app: heapster
