Add full default list for scheduler policy configuration.

--- a/examples/scheduler-policy-config.json
+++ b/examples/scheduler-policy-config.json
@@ -1,20 +1,106 @@
 {
-"kind" : "Policy",
-"apiVersion" : "v1",
-"predicates" : [
-	{"name" : "PodFitsHostPorts"},
-	{"name" : "PodFitsResources"},
-	{"name" : "NoDiskConflict"},
-	{"name" : "NoVolumeZoneConflict"},
-	{"name" : "MatchNodeSelector"},
-	{"name" : "HostName"}
-	],
-"priorities" : [
-	{"name" : "LeastRequestedPriority", "weight" : 1},
-	{"name" : "BalancedResourceAllocation", "weight" : 1},
-	{"name" : "ServiceSpreadingPriority", "weight" : 1},
-	{"name" : "EqualPriority", "weight" : 1}
-	],
-"hardPodAffinitySymmetricWeight" : 10,
-"alwaysCheckAllPredicates" : false
+  "kind": "Policy",
+  "apiVersion": "v1",
+  "predicates": [
+    {
+      "name": "PodFitsPorts"
+    },
+    {
+      "name": "PodFitsHostPorts"
+    },
+    {
+      "name": "PodFitsResources"
+    },
+    {
+      "name": "HostName"
+    },
+    {
+      "name": "MatchNodeSelector"
+    },
+    {
+      "name": "NoVolumeZoneConflict"
+    },
+    {
+      "name": "MaxEBSVolumeCount"
+    },
+    {
+      "name": "MaxGCEPDVolumeCount"
+    },
+    {
+      "name": "MaxAzureDiskVolumeCount"
+    },
+    {
+      "name": "MatchInterPodAffinity"
+    },
+    {
+      "name": "NoDiskConflict"
+    },
+    {
+      "name": "GeneralPredicates"
+    },
+    {
+      "name": "CheckNodeMemoryPressure"
+    },
+    {
+      "name": "CheckNodeDiskPressure"
+    },
+    {
+      "name": "PodToleratesNodeTaints"
+    },
+    {
+      "name": "CheckVolumeBinding"
+    }
+  ],
+  "priorities": [
+    {
+      "name": "ServiceSpreadingPriority",
+      "weight": 1
+    },
+    {
+      "name": "EqualPriority",
+      "weight": 1
+    },
+    {
+      "name": "ImageLocalityPriority",
+      "weight": 1
+    },
+    {
+      "name": "MostRequestedPriority",
+      "weight": 1
+    },
+    {
+      "name": "SelectorSpreadPriority",
+      "weight": 1
+    },
+    {
+      "name": "InterPodAffinityPriority",
+      "weight": 1
+    },
+    {
+      "name": "LeastRequestedPriority",
+      "weight": 1
+    },
+    {
+      "name": "BalancedResourceAllocation",
+      "weight": 1
+    },
+    {
+      "name": "NodePreferAvoidPodsPriority",
+      "weight": 10000
+    },
+    {
+      "name": "NodeAffinityPriority",
+      "weight": 1
+    },
+    {
+      "name": "TaintTolerationPriority",
+      "weight": 1
+    },
+    {
+      "name": "GPUAllocationPriority",
+      "weight": 10
+    }
+  ],
+  "hardPodAffinitySymmetricWeight" : 10,
+  "alwaysCheckAllPredicates" : false
 }
