Number of parallel workqueue settable

--- a/examples/scheduler-policy-config.json
+++ b/examples/scheduler-policy-config.json
@@ -16,5 +16,6 @@
 	{"name" : "EqualPriority", "weight" : 1}
 	],
 "hardPodAffinitySymmetricWeight" : 10,
+"numberOfWorkQueueParallel":16,
 "alwaysCheckAllPredicates" : false
 }
