--- a/staging/src/k8s.io/apimachinery/pkg/api/resource/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/api/resource/BUILD
@@ -36,7 +36,7 @@ go_library(
         "suffix.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "k8s.io/apimachinery/pkg/api/resource",
+    importpath = "resource",
     deps = [
         "//vendor/github.com/gogo/protobuf/proto:go_default_library",
         "//vendor/github.com/spf13/pflag:go_default_library",
