--- a/staging/src/k8s.io/api/apps/v1/BUILD
+++ b/staging/src/k8s.io/api/apps/v1/BUILD
@@ -10,7 +10,7 @@ go_library(
         "types_swagger_doc_generated.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "k8s.io/api/apps/v1",
+    importpath = "v1",
     visibility = ["//visibility:public"],
     deps = [
         "//vendor/github.com/gogo/protobuf/proto:go_default_library",
