--- a/staging/src/k8s.io/api/storage/v1alpha1/BUILD
+++ b/staging/src/k8s.io/api/storage/v1alpha1/BUILD
@@ -16,7 +16,7 @@ go_library(
         "types_swagger_doc_generated.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "k8s.io/api/storage/v1alpha1",
+    importpath = "v1alpha1",
     visibility = ["//visibility:public"],
     deps = [
         "//vendor/github.com/gogo/protobuf/proto:go_default_library",
