--- a/staging/src/k8s.io/apimachinery/pkg/apis/meta/v1beta1/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/apis/meta/v1beta1/BUILD
@@ -19,7 +19,7 @@ go_library(
         "zz_generated.deepcopy.go",
         "zz_generated.defaults.go",
     ],
-    importpath = "k8s.io/apimachinery/pkg/apis/meta/v1beta1",
+    importpath = "v1beta1",
     visibility = ["//visibility:public"],
     deps = [
         "//vendor/github.com/gogo/protobuf/proto:go_default_library",
