--- a/staging/src/k8s.io/apiserver/pkg/apis/audit/v1beta1/BUILD
+++ b/staging/src/k8s.io/apiserver/pkg/apis/audit/v1beta1/BUILD
@@ -18,7 +18,7 @@ go_library(
         "zz_generated.deepcopy.go",
         "zz_generated.defaults.go",
     ],
-    importpath = "k8s.io/apiserver/pkg/apis/audit/v1beta1",
+    importpath = "v1beta1",
     deps = [
         "//vendor/github.com/gogo/protobuf/proto:go_default_library",
         "//vendor/k8s.io/api/authentication/v1:go_default_library",
