--- a/staging/src/k8s.io/apiserver/pkg/apis/example2/v1/BUILD
+++ b/staging/src/k8s.io/apiserver/pkg/apis/example2/v1/BUILD
@@ -19,7 +19,7 @@ go_library(
         "zz_generated.deepcopy.go",
         "zz_generated.defaults.go",
     ],
-    importpath = "k8s.io/apiserver/pkg/apis/example2/v1",
+    importpath = "v1",
     deps = [
         "//vendor/github.com/gogo/protobuf/proto:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
