--- a/pkg/scheduler/api/validation/BUILD
+++ b/pkg/scheduler/api/validation/BUILD
@@ -13,6 +13,7 @@ go_library(
     deps = [
         "//pkg/scheduler/api:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
     ],
 )
 
