--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -30,6 +30,7 @@ go_library(
         "create_deployment.go",
         "create_namespace.go",
         "create_pdb.go",
+        "create_podsecuritypolicy.go",
         "create_priorityclass.go",
         "create_quota.go",
         "create_role.go",
@@ -143,6 +144,7 @@ go_library(
         "//vendor/k8s.io/client-go/discovery:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
+        "//vendor/k8s.io/client-go/kubernetes/typed/extensions/v1beta1:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes/typed/rbac/v1:go_default_library",
         "//vendor/k8s.io/client-go/rest:go_default_library",
         "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
@@ -173,6 +175,7 @@ go_test(
         "create_deployment_test.go",
         "create_namespace_test.go",
         "create_pdb_test.go",
+        "create_podsecuritypolicy_test.go",
         "create_priorityclass_test.go",
         "create_quota_test.go",
         "create_role_test.go",
@@ -233,6 +236,7 @@ go_test(
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
         "//vendor/gopkg.in/yaml.v2:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
+        "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
         "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
         "//vendor/k8s.io/api/rbac/v1:go_default_library",
         "//vendor/k8s.io/api/rbac/v1beta1:go_default_library",
