--- a/api/swagger-spec/extensions_v1beta1.json
+++ b/api/swagger-spec/extensions_v1beta1.json
@@ -10229,7 +10229,8 @@
      "seLinux",
      "runAsUser",
      "supplementalGroups",
-     "fsGroup"
+     "fsGroup",
+     "maxPriorityClassValue"
     ],
     "properties": {
      "privileged": {
@@ -10324,6 +10325,11 @@
        "$ref": "v1beta1.AllowedFlexVolume"
       },
       "description": "AllowedFlexVolumes is a whitelist of allowed Flexvolumes.  Empty or nil indicates that all Flexvolumes may be used.  This parameter is effective only when the usage of the Flexvolumes is allowed in the \"Volumes\" field."
+     },
+     "maxPriorityClassValue": {
+      "type": "integer",
+      "format": "int32",
+      "description": "The max integer value of priority one pod can set. PodPriority feature is required, otherwise this field is ignored."
      }
     }
    },
