--- a/cmd/gke-certificates-controller/app/BUILD
+++ b/cmd/gke-certificates-controller/app/BUILD
@@ -19,6 +19,7 @@ go_library(
         "//pkg/apis/certificates/install:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificates:go_default_library",
+        "//pkg/version/verflag:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/github.com/spf13/pflag:go_default_library",
