--- a/examples/cloud-controller-manager/persistent-volume-label-initializer-config.yaml
+++ b/examples/cloud-controller-manager/persistent-volume-label-initializer-config.yaml
@@ -1,5 +1,5 @@
 kind: InitializerConfiguration
-apiVersion: admissionregistration.k8s.io/v1alpha1
+apiVersion: admissionregistration.k8s.io/v1beta1
 metadata:
   name: pvlabel.kubernetes.io
 initializers:
