--- a/staging/src/k8s.io/apimachinery/pkg/api/errors/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/api/errors/BUILD
@@ -27,6 +27,7 @@ go_library(
     ],
     importpath = "k8s.io/apimachinery/pkg/api/errors",
     deps = [
+        "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
