--- a/api/swagger-spec/apps_v1.json
+++ b/api/swagger-spec/apps_v1.json
@@ -8524,11 +8524,15 @@
       "items": {
        "type": "string"
       },
-      "description": "namespaces specifies which namespaces the labelSelector applies to (matches against); null or empty list means \"this pod's namespace\""
+      "description": "Deprecated: please use the NamespaceSelector, this field will be removed in future. namespaces specifies which namespaces the labelSelector applies to (matches against); null or empty list means \"this pod's namespace\""
      },
      "topologyKey": {
       "type": "string",
       "description": "This pod should be co-located (affinity) or not co-located (anti-affinity) with the pods matching the labelSelector in the specified namespaces, where co-located is defined as running on a node whose value of the label with key topologyKey matches that of any node on which any of the selected pods is running. Empty topologyKey is not allowed."
+     },
+     "namespaceSelector": {
+      "$ref": "v1.LabelSelector",
+      "description": "Selects Namespaces using cluster scoped-labels.  This matches namespaces selected by this label selector. This field follows standard label selector semantics. If present but empty, this selector selects all namespaces, if this selector is not provided (nil), the Pod's namespace will be used."
      }
     }
    },
