add kubectl create daemonset command

--- a/pkg/kubectl/BUILD
+++ b/pkg/kubectl/BUILD
@@ -100,6 +100,7 @@ go_library(
         "clusterrolebinding.go",
         "conditions.go",
         "configmap.go",
+        "daemonset.go",
         "delete.go",
         "deployment.go",
         "doc.go",
