--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -27,6 +27,7 @@ go_library(
         "create_clusterrole.go",
         "create_clusterrolebinding.go",
         "create_configmap.go",
+        "create_deamonset.go",
         "create_deployment.go",
         "create_job.go",
         "create_namespace.go",
@@ -171,6 +172,7 @@ go_test(
         "create_clusterrole_test.go",
         "create_clusterrolebinding_test.go",
         "create_configmap_test.go",
+        "create_daemonset_test.go",
         "create_deployment_test.go",
         "create_job_test.go",
         "create_namespace_test.go",
