--- a/staging/BUILD
+++ b/staging/BUILD
@@ -26,6 +26,7 @@ filegroup(
         "//staging/src/k8s.io/api/batch/v1:all-srcs",
         "//staging/src/k8s.io/api/batch/v1beta1:all-srcs",
         "//staging/src/k8s.io/api/batch/v2alpha1:all-srcs",
+        "//staging/src/k8s.io/api/bulk/v1alpha1:all-srcs",
         "//staging/src/k8s.io/api/certificates/v1beta1:all-srcs",
         "//staging/src/k8s.io/api/core/v1:all-srcs",
         "//staging/src/k8s.io/api/events/v1beta1:all-srcs",
@@ -93,6 +94,7 @@ filegroup(
         "//staging/src/k8s.io/apiserver/pkg/admission:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/apis/apiserver:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/apis/audit:all-srcs",
+        "//staging/src/k8s.io/apiserver/pkg/apis/bulk:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/apis/example:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/apis/example2:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/audit:all-srcs",
@@ -113,6 +115,7 @@ filegroup(
         "//staging/src/k8s.io/apiserver/pkg/authorization/authorizer:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/authorization/authorizerfactory:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/authorization/union:all-srcs",
+        "//staging/src/k8s.io/apiserver/pkg/bulk:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/endpoints:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/features:all-srcs",
         "//staging/src/k8s.io/apiserver/pkg/registry:all-srcs",
