--- a/pkg/scheduler/apis/schedulerconfig/scheme/BUILD
+++ b/pkg/scheduler/apis/schedulerconfig/scheme/BUILD
@@ -1,31 +1,18 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "defaults.go",
-        "doc.go",
-        "register.go",
-        "types.go",
-        "zz_generated.conversion.go",
-        "zz_generated.deepcopy.go",
-        "zz_generated.defaults.go",
-    ],
-    importpath = "k8s.io/kubernetes/pkg/apis/componentconfig/v1alpha1",
+    srcs = ["scheme.go"],
+    importpath = "k8s.io/kubernetes/pkg/scheduler/apis/schedulerconfig/scheme",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/componentconfig:go_default_library",
+        "//pkg/scheduler/apis/schedulerconfig:go_default_library",
+        "//pkg/scheduler/apis/schedulerconfig/v1alpha1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/conversion:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
     ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["defaults_test.go"],
-    embed = [":go_default_library"],
 )
 
 filegroup(
