--- a/pkg/scheduler/apis/schedulerconfig/v1alpha1/BUILD
+++ b/pkg/scheduler/apis/schedulerconfig/v1alpha1/BUILD
@@ -11,10 +11,14 @@ go_library(
         "zz_generated.deepcopy.go",
         "zz_generated.defaults.go",
     ],
-    importpath = "k8s.io/kubernetes/pkg/apis/componentconfig/v1alpha1",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/apis/schedulerconfig/v1alpha1",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/componentconfig:go_default_library",
+        "//pkg/apis/componentconfig/v1alpha1:go_default_library",
+        "//pkg/apis/core:go_default_library",
+        "//pkg/kubelet/apis:go_default_library",
+        "//pkg/master/ports:go_default_library",
+        "//pkg/scheduler/apis/schedulerconfig:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/conversion:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
@@ -26,6 +30,7 @@ go_test(
     name = "go_default_test",
     srcs = ["defaults_test.go"],
     embed = [":go_default_library"],
+    deps = ["//pkg/scheduler/apis/schedulerconfig:go_default_library"],
 )
 
 filegroup(
