--- a/test/integration/util/BUILD
+++ b/test/integration/util/BUILD
@@ -14,8 +14,8 @@ go_library(
     deps = [
         "//pkg/api/legacyscheme:go_default_library",
         "//pkg/scheduler:go_default_library",
-        "//pkg/scheduler/factory:go_default_library",
         "//test/integration/framework:go_default_library",
+        "//test/integration/scheduler:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/client-go/informers:go_default_library",
