Run update bazel

--- a/staging/src/k8s.io/apiserver/pkg/server/routes/BUILD
+++ b/staging/src/k8s.io/apiserver/pkg/server/routes/BUILD
@@ -10,6 +10,7 @@ go_library(
     srcs = [
         "doc.go",
         "index.go",
+        "logs.go",
         "metrics.go",
         "openapi.go",
         "profiling.go",
