--- a/pkg/kubelet/network/hostport/BUILD
+++ b/pkg/kubelet/network/hostport/BUILD
@@ -39,6 +39,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//pkg/util/iptables:go_default_library",
+        "//pkg/util/net:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/utils/exec:go_default_library",
