--- a/pkg/util/net/BUILD
+++ b/pkg/util/net/BUILD
@@ -22,6 +22,7 @@ go_library(
     name = "go_default_library",
     srcs = ["net.go"],
     importpath = "k8s.io/kubernetes/pkg/util/net",
+    deps = ["//vendor/github.com/golang/glog:go_default_library"],
 )
 
 go_test(
