Copied to the correct place: cp -r read-yaml-configuration-deployment ~/go/src/k8s.io/kubernetes/staging/src/k8s.io/client-go/examples
╭─[~/go/src/k8s.io/kubernetes]─[stefan@Stefans-MBP]─[0]─[662]
╰─[:)] % ./hack/update-bazel.sh
wrote "staging/BUILD"
wrote "staging/src/k8s.io/client-go/examples/read-yaml-configuration-deployment/BUILD"
╭─[~/go/src/k8s.io/kubernetes]─[stefan@Stefans-MBP]─[0]─[663]
╰─[:)] %

Copy the two new BUILD files back

--- a/staging/src/k8s.io/client-go/examples/read-yaml-configuration-deployment/BUILD
+++ b/staging/src/k8s.io/client-go/examples/read-yaml-configuration-deployment/BUILD
@@ -22,3 +22,17 @@ go_binary(
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
+
+filegroup(
+    name = "package-srcs",
+    srcs = glob(["**"]),
+    tags = ["automanaged"],
+    visibility = ["//visibility:private"],
+)
+
+filegroup(
+    name = "all-srcs",
+    srcs = [":package-srcs"],
+    tags = ["automanaged"],
+    visibility = ["//visibility:public"],
+)
