wire through template PrintFlags

--- a/pkg/printers/BUILD
+++ b/pkg/printers/BUILD
@@ -16,11 +16,14 @@ go_library(
         "json.go",
         "json_yaml_flags.go",
         "jsonpath.go",
+        "jsonpath_flags.go",
+        "kube_template_flags.go",
         "name.go",
         "name_flags.go",
         "printers.go",
         "tabwriter.go",
         "template.go",
+        "template_flags.go",
         "versioned.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/printers",
@@ -48,7 +51,9 @@ go_test(
         "customcolumn_flags_test.go",
         "customcolumn_test.go",
         "json_yaml_flags_test.go",
+        "jsonpath_flags_test.go",
         "name_flags_test.go",
+        "template_flags_test.go",
     ],
     deps = [
         ":go_default_library",
